--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+venv/
 build/
 develop-eggs/
 dist/
@@ -41,3 +42,6 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 *.log
+
+# JetBrains
+*.idea
